--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "mustangostang/spyc": "dev-master"
     },
     "replace": {
         "gears-php/config": "self.version",
