--- a/component/storage/composer.json
+++ b/component/storage/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "gears-php/config",
+    "name": "gears-php/storage",
     "type": "library",
-    "description": "Config component for Gears Framework",
-    "keywords": ["config"],
+    "description": "A general-purpose runtime storage solution",
+    "keywords": ["storage", "configuration"],
     "license": "MIT",
     "version": "0.1.0",
     "authors": [
@@ -12,12 +12,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.5.0",
         "mustangostang/spyc": "0.5.*@dev"
     },
     "autoload": {
         "psr-4": {
-            "Gears\\Config\\": "src/"
+            "Gears\\Storage\\": "src/"
         }
     }
 }
