--- a/component/storage/phpunit.xml.dist
+++ b/component/storage/phpunit.xml.dist
@@ -7,7 +7,7 @@
          bootstrap="./tests/bootstrap.php"
 >
     <testsuites>
-        <testsuite name="Config component Test Suite">
+        <testsuite name="Storage component Test Suite">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
