--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=8.0",
+        "symfony/http-foundation": "^5.1",
         "mustangostang/spyc": "0.5.*@dev"
     },
     "replace": {
