--- a/component/storage/composer.json
+++ b/component/storage/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Denis Krasilnikov",
-            "email": "deniskrasilnikov86@gmail.com"
+            "email": "denis.krasilnikov@gears.com"
         }
     ],
     "require": {
